@@ -26,6 +26,9 @@ Bugfixes:
 - a client buffer of 0 on live streams no longer breaks playback (Jira CS-3)
 - fixed shutdown error in Tomcat with WAR version by updating to SLF4J 1.3.1
   (Jira APPSERVER-107)
+- "NetStream.Play.InsufficientBW" is sent if client is too slow receiving
+  video streams (Jira APPSERVER-51)
+- improved frame dropping code for slow connections
 
 
 Red5 0.6rc3 (2007-04-11)
